--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -29,7 +29,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/settings_username"
+                android:id="@+id/settings_fullname"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="@dimen/horizontal_margin"
@@ -50,7 +50,7 @@
                 android:textSize="@dimen/smallText"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@id/settings_user_photo"
-                app:layout_constraintTop_toBottomOf="@id/settings_username" />
+                app:layout_constraintTop_toBottomOf="@id/settings_fullname" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -95,31 +95,31 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/settings_btn_change_login"
+            android:id="@+id/settings_btn_change_user_name"
             style="@style/settingsButtons"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/settings_btn_change_number_phone">
 
             <TextView
-                android:id="@+id/settings_login"
+                android:id="@+id/settings_user_name"
                 style="@style/normalText"
                 android:text="@string/settings_default_login"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/settings_btn_change_login" />
+                app:layout_constraintTop_toTopOf="@id/settings_btn_change_user_name" />
 
             <TextView
-                android:id="@+id/settings_label_login"
+                android:id="@+id/settings_label_user_name"
                 style="@style/smallText"
                 android:text="@string/settings_label_login"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/settings_login" />
+                app:layout_constraintTop_toBottomOf="@id/settings_user_name" />
 
             <View
                 style="@style/separator"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/settings_label_login" />
+                app:layout_constraintTop_toBottomOf="@id/settings_label_user_name" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -127,7 +127,7 @@
             style="@style/settingsButtons"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/settings_btn_change_login">
+            app:layout_constraintTop_toBottomOf="@id/settings_btn_change_user_name">
 
             <TextView
                 android:id="@+id/settings_bio"
