--- a/app/src/main/res/layout/fragment_enter_phone.xml
+++ b/app/src/main/res/layout/fragment_enter_phone.xml
@@ -8,6 +8,7 @@
         android:layout_height="match_parent">
 
         <EditText
+            android:hint="@string/register_hint"
             android:id="@+id/register_input_phone_number"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
